--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "lint:prettier:check": "prettier --check .",
     "lint:prettier:fix": "prettier --write .",
     "lint:eslint:check": "eslint .",
-    "lint:eslint:fix": "eslint . --fix"
+    "lint:eslint:fix": "eslint . --fix",
+    "prepare": "husky"
   },
   "dependencies": {
     "next": "16.1.1",
@@ -23,11 +24,16 @@
     "react-dom": "19.2.3"
   },
   "devDependencies": {
+    "@commitlint/cli": "20.2.0",
+    "@commitlint/config-conventional": "20.2.0",
+    "@secretlint/secretlint-rule-preset-recommend": "11.2.5",
     "@types/node": "25.0.3",
     "@types/react": "19.2.7",
     "eslint": "9.39.2",
     "eslint-config-next": "16.1.1",
     "eslint-config-prettier": "10.1.8",
-    "prettier": "3.7.4"
+    "husky": "9.1.7",
+    "prettier": "3.7.4",
+    "secretlint": "11.2.5"
   }
 }
