--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,9 +15,13 @@
     "jsx": "react-jsx",
     "plugins": [
       {
-        "name": "next"
-      }
-    ]
+        "name": "next",
+      },
+    ],
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["src/*"],
+    },
   },
   "include": [
     "next-env.d.ts",
@@ -25,7 +29,7 @@
     ".next/dev/types/**/*.ts",
     "**/*.mts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
   ],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
 }
