--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "4.1.18",
     "next": "16.1.1",
+    "postcss": "8.5.6",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "tailwindcss": "4.1.18"
   },
   "devDependencies": {
     "@commitlint/cli": "20.2.0",
