--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "eslint-config-prettier": "10.1.8",
     "husky": "9.1.7",
     "prettier": "3.7.4",
+    "prettier-plugin-organize-imports": "4.3.0",
+    "prettier-plugin-tailwindcss": "0.7.2",
     "secretlint": "11.2.5"
   }
 }
