--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@primer/octicons-react": "19.21.1",
     "@tailwindcss/postcss": "4.1.18",
     "next": "16.1.1",
     "next-themes": "0.4.6",
