--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "test": "vitest run --no-file-parallelism",
+    "test": "concurrently -n next,vitest --hide next -k -s command-vitest \"next dev\" \"vitest run --no-file-parallelism\"",
     "test:watch": "vitest --no-file-parallelism",
     "lint:prettier:check": "prettier --check .",
     "lint:prettier:fix": "prettier --write .",
@@ -23,6 +23,7 @@
   "dependencies": {
     "@primer/octicons-react": "19.21.1",
     "@tailwindcss/postcss": "4.1.18",
+    "async-retry": "1.3.3",
     "next": "16.1.1",
     "next-themes": "0.4.6",
     "postcss": "8.5.6",
@@ -34,8 +35,10 @@
     "@commitlint/cli": "20.2.0",
     "@commitlint/config-conventional": "20.2.0",
     "@secretlint/secretlint-rule-preset-recommend": "11.2.5",
+    "@types/async-retry": "1.4.9",
     "@types/node": "25.0.3",
     "@types/react": "19.2.7",
+    "concurrently": "9.2.1",
     "eslint": "9.39.2",
     "eslint-config-next": "16.1.1",
     "eslint-config-prettier": "10.1.8",
