--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "dotenv": "17.2.3",
     "dotenv-expand": "12.0.3",
     "drizzle-orm": "0.45.1",
+    "hono": "4.11.3",
     "next": "16.1.1",
     "next-themes": "0.4.6",
     "pg": "8.16.3",
