--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "test": "npm run services:up && concurrently -n next,vitest --hide next -k -s command-vitest \"next dev\" \"vitest run --no-file-parallelism\"",
     "posttest": "npm run services:stop",
     "test:watch": "vitest --no-file-parallelism",
-    "services:up": "docker compose -p expense-manager -f infra/compose.yaml up -d",
-    "services:stop": "docker compose -p expense-manager -f infra/compose.yaml stop",
-    "services:down": "docker compose -p expense-manager -f infra/compose.yaml down",
-    "services:wait:database": "node infra/scripts/wait-for-database.ts",
+    "services:up": "docker compose -p expense-manager -f src/infra/compose.yaml up -d",
+    "services:stop": "docker compose -p expense-manager -f src/infra/compose.yaml stop",
+    "services:down": "docker compose -p expense-manager -f src/infra/compose.yaml down",
+    "services:wait:database": "node src/infra/scripts/wait-for-database.ts",
     "migrations:generate": "npx drizzle-kit generate",
     "migrations:up": "npx drizzle-kit migrate",
     "lint:prettier:check": "prettier --check .",
